# airone

./: .gitignore  AirOne GUI.bat  CHANGELOG.md  Makefile  README.md  airone_gui.py  concept.md  pyproject.toml  setup.py  test_reconstructed.txt  walkthrough.md
.github/workflows/: ci.yml
airone/: __init__.py  api.py  exceptions.py
airone/analysis/: document_decomposer.py  engine.py  entropy.py  format_detector.py  image_classifier.py
airone/benchmarks/: runner.py
airone/cli/: main.py
airone/cli/commands/: analyze.py  compress.py  decompress.py
airone/collection/: delta.py  lsh.py  optimizer.py
airone/compressors/: base.py
airone/compressors/neural/: codec.py  onnx_runtime.py  trainer.py
airone/compressors/procedural/: __init__.py  gradient.py
airone/compressors/semantic/: json_semantic.py  office.py  pdf.py  pdf_reconstructor.py  pdf_reconstructor_v2.py
airone/compressors/traditional/: __init__.py  brotli.py  lzma.py  zstd.py
airone/core/: file_format.py  streaming.py  verification.py
airone/orchestrator/: orchestrator.py
airone/strategy/: __init__.py  registry.py  selector.py
docs/: AirOne_Technical_Report_v1.0.docx
examples/: 01_basic_compress.py  02_lsh_collection.py  03_streaming.py
requirements/: base.txt  dev.txt
results/: benchmark_20260421_112645.json
results/corpus/: json_log_large.json  json_log_medium.json  report.docx  text_large.txt  text_medium.txt  text_small.txt
scripts/: bench_json_v2.py  deep_benchmark.py  gen_report.py  gen_research_visuals.py  output_compressed_corpus.py  visual_comparison.py
tests/: conftest.py  test_analysis.py  test_benchmark.py  test_cli.py  test_collection_optimizer.py  test_compressors.py  test_delta_encoding.py  test_document_decomposer.py  test_lsh_similarity.py  test_memory_safety.py  test_neural_codec.py  test_office_compressor.py  test_onnx_codec.py  test_pdf_compressor.py  test_pdf_reconstructor_v2.py  test_procedural.py  test_routing.py  test_semantic_json.py  test_strategy.py  test_streaming.py
