[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "airone"
version = "1.0.0"
description = "Intelligent Semantic Compression Platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AirOne Team", email = "hello@airone.io" }]
keywords = ["compression", "semantic", "lossless", "pdf", "neural"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "click>=8.0.0",
    "Pillow>=9.0.0",
    "pypdf>=3.0.0",
    "zstandard>=0.19.0",
    "brotli>=1.0.9",
    "msgpack>=1.0.0",
    "xxhash>=3.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnxruntime>=1.15.0",
    "onnx>=1.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
airone = "airone.cli.main:cli"

[project.urls]
Homepage = "https://github.com/airone/airone"
Repository = "https://github.com/airone/airone"
Documentation = "https://airone.readthedocs.io"
Changelog = "https://github.com/airone/airone/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
timeout = 120

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

[tool.coverage.run]
source = ["airone"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
